--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html
-      - ./.env:/var/www/html.env
+    - ${PWD}/:/var/www/html
+    - ${PWD}/env:/var/www/html.env
     environment:
       - APP_ENV=local
     networks:
@@ -24,15 +24,14 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - ./:/var/www/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    - ${PWD}/:/var/www/html
+    - ${PWD}/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - app
     networks:
       - app-network        
 
   node:
-    platform: linux/arm64/v8 #this line is optional if you are using Mac Silicon chip (M1/M2/M3)
     build:
       context: .
       dockerfile: Dockerfile.node
@@ -43,24 +42,22 @@ services:
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html
-      - /var/www/html/node_modules
+    - ${PWD}/:/var/www/html
+    - /var/www/html/node_modules
     command: ["npm", "run", "dev"]
     networks:
       - app-network
 
   db:
-    platform: linux/x86_64 #this line is optional if you are using Mac Silicon chip (M1/M2/M3)
     image: mysql:8.0
     container_name: my-mysql
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: car_garage
-      MYSQL_USER: root
       MYSQL_PASSWORD: rootsecret
       MYSQL_ROOT_PASSWORD: rootsecret
-    volumes:
-      - dbdata:/var/lib/mysql
+        #  volumes:
+        # - dbdata:/var/lib/mysql
     networks:
       - app-network
     ports:
@@ -70,6 +67,6 @@ networks:
   app-network:
     driver: bridge
 
-volumes:
-  dbdata:
-    driver: local
+      #volumes:
+      #  dbdata:
+      # driver: local
